<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ascon</string>
    <string name="nav_home">Home</string>
    <string name="nav_library">Library</string>
    <string name="nav_browse">Browse</string>
    <string name="nav_settings">Settings</string>
    <string name="browser_closed">Browser closed</string>
    <string name="browser_closed_undo">Undo</string>
</resources>
